phase on of fixing card paying forms not showing fully on mobile

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -363,7 +363,7 @@ footer {
   padding: 1rem;
 }
 .order-action {
-  flex: 1 1 20rem;
+  flex: 1 1 30rem;
   border: 0.1rem #c0c0c0 solid;
   border-radius: 0.5rem;
   background-color: #fcfcfc;
